create new-food component with form, clickSender and addFood function

--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -7,4 +7,5 @@
   <p>{{showDetails.meal}}</p>
   <p>{{showDetails.calories}}</p>
   <p>{{showDetails.details}}</p>
+  <button (click)="hideFoodDetails()">Hide</button>
 </div>
