--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>{{title}}</h1>
 
 <app-food-list [childFoodList]="masterFoodList"></app-food-list>
+<app-new-food (newFoodSender)="addFood($event)"></app-new-food>
