--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -1,14 +1,16 @@
-<button (click)="showNewForm()">Add a meal</button>
-<div class="container" *ngIf="showNew">
-<h1>Add to food log</h1>
-  <label>Meal</label>
-  <input #newMeal class="form-control">
-  <label>Name</label>
-  <input #newName class="form-control">
-  <label>Calories</label>
-  <input #newCalories class="form-control">
-  <label>Details</label>
-  <input #newDetails class="form-control">
-  <button (click)="submitNewFood(newMeal.value, newName.value, newCalories.value, newDetails.value)">Add meal to log</button>
-  <button (click)="hideNewForm()">Hide</button>
+<div class="container">
+  <button (click)="showNewForm()" id="click">Add a meal</button>
+  <div *ngIf="showNew" class="well" id="well">
+  <h1 id=title>Add to food log</h1>
+    <label>Meal</label>
+    <input #newMeal class="form-control">
+    <label>Name</label>
+    <input #newName class="form-control">
+    <label>Calories</label>
+    <input #newCalories class="form-control">
+    <label>Details</label>
+    <input #newDetails class="form-control">
+    <button (click)="submitNewFood(newMeal.value, newName.value, newCalories.value, newDetails.value)" id="click">Add meal to log</button>
+    <button (click)="hideNewForm()" id="click">Hide</button>
+  </div>
 </div>
