--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+#food {
+  background-color: #264d73;
+  color: white;
+  font-size: 25px;
+}
+#food:hover {
+  text-decoration: underline;
+  color: #c6d9ec
+}
+#well {
+  background-color: #c6d9ec;
+}
+#jumbotron {
+  background-color: #264d73;
+  color: white;
+  font-size: 40px;
+  text-align: center;
+  text-shadow: 1.5px 1.5px #3973ac;
+}
+#title {
+  color: #264d73;
+  text-shadow: 1.5px 1.5px #c6d9ec;
+}
+#click {
+  background-color: #264d73;
+  font-size: 18px;
+  color: white;
+}
