--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -1,21 +1,23 @@
 <div class="container">
   <div class="panel-default">
-    <h3>Sort by Calories</h3>
+    <h3 id=title>Sort by Calories</h3>
     <select (change)="onChange($event.target.value)">
       <option value="allMeals" selected="selected">All meals</option>
       <option value="moreThanOneThousand">Meals greater than 1000 calories</option>
       <option value="lessThanFiveHundred">Meals under 500 calories</option>
     </select>
-
   </div>
-  <li *ngFor="let currentFood of childFoodList | calorieSort:filterByCalories" class="panel-heading" (click)="showFoodDetails(currentFood)">Name:&nbsp;{{currentFood.name}}</li>
+  <h3 id=title>Meals</h3>
+  <div class="panel panel-default" >
+  <li *ngFor="let currentFood of childFoodList | calorieSort:filterByCalories" class="panel-heading" id="food" (click)="showFoodDetails(currentFood)">Name:&nbsp;{{currentFood.name}}</li>
+  </div>
 
-  <div class="well" *ngIf="showDetails">
-    <h2>Details for {{showDetails.name}}</h2>
+  <div class="well" *ngIf="showDetails" id="well">
+    <h2 id=title>Details for {{showDetails.name}}</h2>
     <p>{{showDetails.meal}}</p>
     <p>{{showDetails.calories}}</p>
     <p>{{showDetails.details}}</p>
-    <button (click)="hideFoodDetails()">Hide</button>
-    <button (click)="editButtonHasBeenClicked(showDetails)">Edit</button>
+    <button (click)="hideFoodDetails()" id="click">Hide</button>
+    <button (click)="editButtonHasBeenClicked(showDetails)" id="click">Edit</button>
   </div>
 </div>
