add day of week to constructor, create day-sort pipe

--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -9,7 +9,8 @@
     <input [(ngModel)]="childSelectedFood.calories" class="form-control">
     <label>Details</label>
     <input [(ngModel)]="childSelectedFood.details" class="form-control">
-
+    <label>Day of Week</label>
+    <input [(ngModel)]="childSelectedFood.dayOfWeek" class="form-control">
     <button (click)="doneButtonClicked()" id="click">Done</button>
   </div>
 </div>
