--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="panel-default">
     <h3 id=title>Sort by Calories</h3>
-    <select (change)="onChange($event.target.value)">
+    <select (change)="onChangeCalories($event.target.value)">
       <option value="allMeals" selected="selected">All meals</option>
       <option value="moreThanOneThousand">Meals greater than 1000 calories</option>
       <option value="lessThanFiveHundred">Meals under 500 calories</option>
@@ -9,7 +9,7 @@
   </div>
   <div class="panel-default">
     <h3 id=title>Sort by Day</h3>
-    <select (change)="onChange($event.target.value)">
+    <select (change)="onChangeDays($event.target.value)">
       <option value="allDays" selected="selected">All days</option>
       <option value="monday">Monday</option>
       <option value="tuesday">Tuesday</option>
@@ -22,7 +22,7 @@
   </div>
   <h3 id=title>Meals</h3>
   <div class="panel panel-default">
-  <li *ngFor="let currentFood of childFoodList | calorieSort:filterByCalories" class="panel-heading" id="food" (click)="showFoodDetails(currentFood)">Name:&nbsp;{{currentFood.name}}</li>
+  <li *ngFor="let currentFood of childFoodList | calorieSort:filterByCalories | daySort:filterByDays" class="panel-heading" id="food" (click)="showFoodDetails(currentFood)">Name:&nbsp;{{currentFood.name}}</li>
   </div>
 
   <div class="well" *ngIf="showDetails" id="well">
