--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -31,6 +31,8 @@
     <p [class]="calorieColor(showDetails)">{{showDetails.calories}}</p>
     <p>{{showDetails.details}}</p>
     <p>{{showDetails.dayOfWeek}}</p>
+    <button (click)="showDailyCalories(showDetails)" id="click">Show total calories for this day</button>
+    <p>{{showDaily}}</p>
     <button (click)="hideFoodDetails()" id="click">Hide</button>
     <button (click)="editButtonHasBeenClicked(showDetails)" id="click">Edit</button>
   </div>
