show/hide calorie count on click

--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -32,7 +32,7 @@
     <p>{{showDetails.details}}</p>
     <p>{{showDetails.dayOfWeek}}</p>
     <button (click)="showDailyCalories(showDetails)" id="click">Show total calories for this day</button>
-    <p>{{showDaily}}</p>
+    <p>Total daily calories: {{showDaily}}</p>
     <button (click)="hideFoodDetails()" id="click">Hide</button>
     <button (click)="editButtonHasBeenClicked(showDetails)" id="click">Edit</button>
   </div>
